--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -3,14 +3,21 @@ name: C/C++ CI
 on: [push]
 
 jobs:
-  build:
-
+- build:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v1
     - name: apt
       run: sudo apt install libusb-1.0-0-dev libsqlite3-dev ninja-build
+    - name: make
+      run: make
+
+- build:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: brew
+      run: brew install sqlite
     - name: make
       run: make
 
