--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,9 +1,9 @@
 name: C/C++ CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-- build:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -12,7 +12,7 @@ jobs:
     - name: make
       run: make
 
-- build:
+  build:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v1
