--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: brew
-      run: brew install sqlite
+      run: brew install sqlite pkg-config
     - name: make
       run: make
 
