--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -31,6 +31,4 @@ jobs:
     - name: pacman
       run: msys2do pacman -S --noconfirm --needed make ninja mingw-w64-i686-libusb mingw-w64-i686-sqlite3 mingw-w64-i686-zlib mingw-w64-i686-gcc zip
     - name: make
-      run: |
-        set MSYSTEM=MINGW32
-        msys2do make
+      run: msys2do make
