--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -21,14 +21,14 @@ jobs:
     - name: make
       run: make
 
-#  build-windows:
-#    runs-on: windows-latest
-#    steps:
-#    - uses: numworks/setup-msys2@v1
-#      with:
-#        msystem: MSYS
-#    - uses: actions/checkout@v1
-#    - name: pacman
-#      run: msys2do pacman -S --noconfirm --needed make ninja mingw-w64-i686-libusb mingw-w64-i686-sqlite3 mingw-w64-i686-zlib mingw-w64-i686-gcc zip
-#    - name: make
-#      run: msys2do make
+  build-windows:
+    runs-on: windows-latest
+    steps:
+    - uses: numworks/setup-msys2@v1
+      with:
+        msystem: MSYS
+    - uses: actions/checkout@v1
+    - name: pacman
+      run: msys2do pacman -S --noconfirm --needed make ninja mingw-w64-i686-libusb mingw-w64-i686-sqlite3 mingw-w64-i686-zlib mingw-w64-i686-gcc zip
+    - name: make
+      run: msys2do make
