--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -27,9 +27,8 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/checkout@v1
     - name: pacman
-      shell: python .github\workflows\msys-bash.py {0}
       run: |
-        find /c/tools
+        msys2do find /c/tools
         #pacman -S --noconfirm --needed make ninja mingw-w64-i686-libusb mingw-w64-i686-sqlite3 mingw-w64-i686-zlib mingw-w64-i686-gcc zip
         #ls
 
