--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -34,8 +34,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: pacman
       run: |
-        msys2do set
+        msys2do printenv
         msys2do pwd
+        msys2do find /c -name pacman.exe
         #pacman -S --noconfirm --needed make ninja mingw-w64-i686-libusb mingw-w64-i686-sqlite3 mingw-w64-i686-zlib mingw-w64-i686-gcc zip
         #ls
 
