--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -38,10 +38,7 @@ jobs:
     - name: pacman
       run: |
         pacman -S --noconfirm --needed make ninja mingw-w64-i686-libusb mingw-w64-i686-sqlite3 mingw-w64-i686-zlib mingw-w64-cross-gcc zip
-    - name: ls
-      run: |
-        ls /opt/bin
     - name: build
       run: |
-        make CXX=/opt/bin/i686-w64-mingw32-gcc.exe CFLAGS="-I/mingw32/include" LDFLAGS="-L/mingw32/lib"
+        make CXX=/opt/bin/i686-w64-mingw32-gcc.exe
 
