--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -40,5 +40,5 @@ jobs:
         pacman -S --noconfirm --needed make ninja mingw-w64-i686-libusb mingw-w64-i686-sqlite3 mingw-w64-i686-zlib mingw-w64-cross-gcc zip
     - name: build
       run: |
-        make CXX=/opt/bin/i686-w64-mingw32-gcc.exe
+        make CXX=/opt/bin/i686-w64-mingw32-gcc.exe AR="/opt/bin/i686-w64-mingw32-ar.exe rcs"
 
