--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,10 +26,18 @@ jobs:
       run: |
         zip -9 fluxengine.zip fluxengine.exe brother120tool.exe brother240tool.exe FluxEngine.cydsn/CortexM3/ARM_GCC_541/Release/FluxEngine.hex
     - name: tag
-      uses: hole19/git-tag-action@master
-      env:
-        TAG: dev
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: EndBug/latest-tag@latest
+        with:
+          tag-name: dev
+          description: >
+            This is an automatically built version of the FluxEngine Windows client
+            which is generated whenever a significant checkin has happened. It's had
+            no testing whatsoever.
+
+            To use, download it, put it somewhere, and then run it from a cmd window
+            or other command line shell.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
     - name: delete-old-assets
       uses: mknejp/delete-release-assets@v1
       with:
