Don't fail the deletion if no assets exist.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
         tag: dev
         assets: | 
           fluxengine.zip
+        fail-if-no-assets: false
     - name: release
       uses: softprops/action-gh-release@v1
       with:
