We neeed update:true to get the version of the protobuf package with the static library in it.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
     - uses: msys2/setup-msys2@v2
       with:
-        update: false
+        update: true
         msystem: MINGW32
         install: >-
           make
