--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         fetch-depth: 1
     - name: brew
-      run: brew install sqlite pkg-config libusb ninja protobuf
+      run: brew install sqlite pkg-config libusb ninja protobuf truncate
     - name: make
       run: make
 
