--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -45,6 +45,7 @@ jobs:
           zip
           mingw-w64-i686-protobuf
           vim
+          diffutils
     - uses: actions/checkout@v1
       with:
         fetch-depth: 1
