Add wxwidgets to the build dependencies.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
           mingw-w64-i686-protobuf
           vim
           diffutils
+          mingw-w64-i686-wxWidgets
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
