--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -4,13 +4,20 @@ on: [push]
 
 jobs:
   build-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
+    - name: populate bazel cache
+        id: bazel-cache
+        uses: actions/cache@v2
+        env:
+          version: 4.2.1
+        with:
+          path: | 
+            ~/.cache/bazel
+          key: ${{ runner.os }}-{{ env.version }}-bazel-cache
     - name: apt
-      run: sudo apt update && sudo apt install libudev-dev libsqlite3-dev ninja-build protobuf-compiler libwxgtk3.0-gtk3-dev
+      run: sudo apt update && sudo apt install libudev-dev libsqlite3-dev bazel-bootstrap protobuf-compiler libwxgtk3.0-gtk3-dev
     - name: make
       run: make
 
@@ -18,10 +25,17 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
-      with:
-        fetch-depth: 1
+    - name: populate bazel cache
+        id: bazel-cache
+        uses: actions/cache@v2
+        env:
+          version: 4.2.1
+        with:
+          path: | 
+            ~/.cache/bazel
+          key: ${{ runner.os }}-{{ env.version }}-bazel-cache
     - name: brew
-      run: brew install sqlite pkg-config libusb ninja protobuf truncate wxwidgets
+      run: brew install sqlite pkg-config libusb bazelisk protobuf truncate wxwidgets
     - name: make
       run: make
 
@@ -37,7 +51,6 @@ jobs:
         msystem: MINGW32
         install: >-
           make
-          ninja
           mingw-w64-i686-libusb
           mingw-w64-i686-sqlite3
           mingw-w64-i686-zlib
@@ -47,9 +60,18 @@ jobs:
           vim
           diffutils
           mingw-w64-i686-wxWidgets
+    - name: install bazel
+      run: choco install bazel
     - uses: actions/checkout@v1
-      with:
-        fetch-depth: 1
+    - name: populate bazel cache
+        id: bazel-cache
+        uses: actions/cache@v2
+        env:
+          version: 4.2.1
+        with:
+          path: | 
+            ~/.cache/bazel
+          key: ${{ runner.os }}-{{ env.version }}-bazel-cache
     - name: build
       run: |
         make
