Try and make things work on Windows, again.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -76,7 +76,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: build
       run: |
-        make
+        PATH=$PATH:/c/ProgramData/chocolatey/lib/bazelisk make
 
     - name: zip
       run: |
