Mke things build on Windows.

--- a/dep/libusbp/meson.build
+++ b/dep/libusbp/meson.build
@@ -16,6 +16,29 @@ if target_machine.system() == 'linux'
   system_deps = [
     dependency('libudev')
   ]
+elif target_machine.system() == 'windows'
+  system_sources = [
+    'src/windows/async_in_transfer_windows.c',
+    'src/windows/device_instance_id_windows.c',
+    'src/windows/device_windows.c',
+    'src/windows/error_windows.c',
+    'src/windows/generic_handle_windows.c',
+    'src/windows/generic_interface_windows.c',
+    'src/windows/interface_windows.c',
+    'src/windows/list_windows.c',
+    'src/windows/serial_port_windows.c',
+  ]
+
+  system_deps = [
+    declare_dependency(
+      link_args: [
+        '-lsetupapi',
+        '-lwinusb',
+        '-lole32',
+        '-luuid'
+      ]
+    )
+  ]
 endif
 
 libusbp_dep = declare_dependency(
@@ -34,15 +57,6 @@ libusbp_dep = declare_dependency(
           'src/error.c',
           'src/error_hresult.c',
           'src/find_device.c',
-          #'src/linux/async_in_transfer_linux.c',
-          #'src/linux/device_linux.c',
-          #'src/linux/error_linux.c',
-          #'src/linux/generic_handle_linux.c',
-          #'src/linux/generic_interface_linux.c',
-          #'src/linux/list_linux.c',
-          #'src/linux/serial_port_linux.c',
-          #'src/linux/udev_linux.c',
-          #'src/linux/usbfd_linux.c',
           'src/list.c',
           #'src/mac/async_in_transfer_mac.c',
           #'src/mac/device_mac.c',
@@ -54,15 +68,6 @@ libusbp_dep = declare_dependency(
           #'src/mac/serial_port_mac.c',
           'src/pipe_id.c',
           'src/string.c',
-          #'src/windows/async_in_transfer_windows.c',
-          #'src/windows/device_instance_id_windows.c',
-          #'src/windows/device_windows.c',
-          #'src/windows/error_windows.c',
-          #'src/windows/generic_handle_windows.c',
-          #'src/windows/generic_interface_windows.c',
-          #'src/windows/interface_windows.c',
-          #'src/windows/list_windows.c',
-          #'src/windows/serial_port_windows.c',
         ],
         include_directories: [
           libusbp_includes,
