--- a/dep/libusbp/meson.build
+++ b/dep/libusbp/meson.build
@@ -1,22 +1,6 @@
 libusbp_includes = include_directories('include')
 
-if target_machine.system() == 'linux' 
-  system_sources = [
-    'src/linux/async_in_transfer_linux.c',
-    'src/linux/device_linux.c',
-    'src/linux/error_linux.c',
-    'src/linux/generic_handle_linux.c',
-    'src/linux/generic_interface_linux.c',
-    'src/linux/list_linux.c',
-    'src/linux/serial_port_linux.c',
-    'src/linux/udev_linux.c',
-    'src/linux/usbfd_linux.c',
-  ]
-
-  system_deps = [
-    dependency('libudev')
-  ]
-elif target_machine.system() == 'windows'
+if target_machine.system() == 'windows'
   system_sources = [
     'src/windows/async_in_transfer_windows.c',
     'src/windows/device_instance_id_windows.c',
@@ -39,6 +23,42 @@ elif target_machine.system() == 'windows'
       ]
     )
   ]
+elif target_machine.system() == 'darwin'
+  system_sources = [
+    'src/mac/async_in_transfer_mac.c',
+    'src/mac/device_mac.c',
+    'src/mac/error_mac.c',
+    'src/mac/generic_handle_mac.c',
+    'src/mac/generic_interface_mac.c',
+    'src/mac/iokit_mac.c',
+    'src/mac/list_mac.c',
+    'src/mac/serial_port_mac.c',
+  ]
+
+  system_deps = [
+    declare_dependency(
+      link_args: [
+        '-framework', 'IOKit',
+        '-framework', 'CoreFoundation',
+      ]
+    )
+  ]
+else
+  system_sources = [
+    'src/linux/async_in_transfer_linux.c',
+    'src/linux/device_linux.c',
+    'src/linux/error_linux.c',
+    'src/linux/generic_handle_linux.c',
+    'src/linux/generic_interface_linux.c',
+    'src/linux/list_linux.c',
+    'src/linux/serial_port_linux.c',
+    'src/linux/udev_linux.c',
+    'src/linux/usbfd_linux.c',
+  ]
+
+  system_deps = [
+    dependency('libudev')
+  ]
 endif
 
 libusbp_dep = declare_dependency(
@@ -58,14 +78,6 @@ libusbp_dep = declare_dependency(
           'src/error_hresult.c',
           'src/find_device.c',
           'src/list.c',
-          #'src/mac/async_in_transfer_mac.c',
-          #'src/mac/device_mac.c',
-          #'src/mac/error_mac.c',
-          #'src/mac/generic_handle_mac.c',
-          #'src/mac/generic_interface_mac.c',
-          #'src/mac/iokit_mac.c',
-          #'src/mac/list_mac.c',
-          #'src/mac/serial_port_mac.c',
           'src/pipe_id.c',
           'src/string.c',
         ],
