--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,7 +10,7 @@ jobs:
       with:
         fetch-depth: 1
     - name: apt
-      run: sudo apt update && sudo apt install libudev-dev libsqlite3-dev ninja-build protobuf-compiler libwxgtk3.0-gtk3-dev
+      run: sudo apt update && sudo apt install lua5.3 libudev-dev libsqlite3-dev ninja-build protobuf-compiler libwxgtk3.0-gtk3-dev
     - name: make
       run: make
 
@@ -21,7 +21,7 @@ jobs:
       with:
         fetch-depth: 1
     - name: brew
-      run: brew install sqlite pkg-config libusb ninja protobuf truncate wxwidgets
+      run: brew install sqlite pkg-config libusb lua@5.3 ninja protobuf truncate wxwidgets
     - name: make
       run: make
 
@@ -43,6 +43,7 @@ jobs:
           mingw-w64-i686-zlib
           mingw-w64-i686-gcc
           zip
+          mingw-w64-i686-lua
           mingw-w64-i686-protobuf
           vim
           diffutils
