Windows needs pkg-config.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -42,6 +42,7 @@ jobs:
           mingw-w64-i686-gcc
           mingw-w64-i686-libusb
           mingw-w64-i686-lua
+          mingw-w64-i686-pkg-config
           mingw-w64-i686-protobuf
           mingw-w64-i686-sqlite3
           mingw-w64-i686-wxWidgets
