--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,18 +17,20 @@ jobs:
         update: true
         msystem: MINGW32
         install: >-
-          make
-          ninja
-          mingw-w64-i686-libusb
-          mingw-w64-i686-sqlite3
-          mingw-w64-i686-zlib
-          mingw-w64-i686-gcc
-          zip
-          mingw-w64-i686-protobuf
-          vim
           diffutils
+          make
+          mingw-w64-i686-fmt
+          mingw-w64-i686-gcc
+          mingw-w64-i686-libusb
+          mingw-w64-i686-lua
+          mingw-w64-i686-pkg-config
+          mingw-w64-i686-protobuf
+          mingw-w64-i686-sqlite3
           mingw-w64-i686-wxWidgets
-    - uses: actions/checkout@v2
+          mingw-w64-i686-zlib
+          ninja
+          zip
+    - uses: actions/checkout@v1
       with:
         fetch-depth: 1
     - name: build
