--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
     - name: tag
       uses: EndBug/latest-tag@latest
       with:
-        tag-name: dev
+        ref: dev
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: delete-old-assets
