--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,9 +39,11 @@ jobs:
       run: |
         echo "RELEASE_DATE=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
     - name: tag
-      uses: EndBug/latest-tag@latest
+      uses: EndBug/latest-tag@1.4.0
       with:
-        ref: dev
+        tag-name: dev
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: delete-old-assets
       uses: mknejp/delete-release-assets@v1
       with:
