--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,9 +39,10 @@ jobs:
       run: |
         echo "RELEASE_DATE=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
     - name: tag
-      uses: EndBug/latest-tag@v1.4.0
+      uses: EndBug/latest-tag@latest
       with:
         tag-name: dev
+        force-branch: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: delete-old-assets
