Add missing ignore entry for upgrade-flux-file. Also sort the ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 .project
 /.ninja*
 /brother120tool
-/brother240tool
-/fluxengine
 /brother120tool-*
+/brother240tool
 /brother240tool-*
+/fluxengine
 /fluxengine-*
+/upgrade-flux-file
