--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -17,7 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: brew
-      run: brew install sqlite pkg-config libusb protobuf truncate wxwidgets fmt make
+      run: brew install sqlite pkg-config libusb protobuf wxwidgets fmt make coreutils
+    - name: link 
+      run: |
+        ln -s /usr/local/opt/coreutils/libexec/gnubin/gtruncate /usr/local/bin/truncate
     - name: make
       run: gmake
 
