--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,17 +27,28 @@ jobs:
           mingw-w64-i686-sqlite3
           mingw-w64-i686-wxWidgets
           mingw-w64-i686-zlib
+          mingw-w64-i686-nsis
           zip
     - uses: actions/checkout@v3
+
     - name: build
       run: |
         make
+
+    - name: nsis
+      run: |
+        strip fluxengine.exe -o fluxengine-stripped.exe
+        strip fluxengine-gui.exe -o fluxengine-gui-stripped.exe
+        makensis -v2 -nocd -dOUTFILE=fluxengine-installer.exe extras/windows-installer.nsi
+
     - name: zip
       run: |
         zip -9 fluxengine.zip fluxengine.exe fluxengine-gui.exe upgrade-flux-file.exe brother120tool.exe brother240tool.exe FluxEngine.cydsn/CortexM3/ARM_GCC_541/Release/FluxEngine.hex
+
     - name: date
       run: |
         echo "RELEASE_DATE=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
+
     - name: tag
       uses: EndBug/latest-tag@latest
       with:
@@ -45,6 +56,7 @@ jobs:
         force-branch: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: delete-old-assets
       uses: mknejp/delete-release-assets@v1
       with:
@@ -52,13 +64,16 @@ jobs:
         tag: dev
         assets: | 
           fluxengine.zip
+          fluxengine-installer.exe
         fail-if-no-assets: false
+
     - name: release
       uses: softprops/action-gh-release@v1
       with:
         name: Development build ${{ env.RELEASE_DATE }}
         files: |
           fluxengine.zip
+          fluxengine-installer.exe
         tag_name: dev
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
