--- a/extras/FluxEngine.app.template/Contents/Info.plist
+++ b/extras/FluxEngine.app.template/Contents/Info.plist
@@ -4,28 +4,6 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
-	<key>CFBundleDocumentTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeExtensions</key>
-			<array>
-				<string>*</string>
-			</array>
-			<key>CFBundleTypeMIMETypes</key>
-			<array>
-				<string>text/plain</string>
-			</array>
-			<key>CFBundleTypeName</key>
-			<string>NSStringPboardType</string>
-			<key>CFBundleTypeOSTypes</key>
-			<array>
-				<string>TEXT</string>
-				<string>****</string>
-			</array>
-			<key>CFBundleTypeRole</key>
-			<string>Viewer</string>
-		</dict>
-	</array>
 	<key>CFBundleExecutable</key>
 	<string>FluxEngine.sh</string>
 	<key>CFBundleGetInfoString</key>
@@ -33,12 +11,12 @@
 	<key>CFBundleIconFile</key>
 	<string>FluxEngine.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.fluxengine.gui</string>
+	<string>com.cowlark.fluxengine.gui</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleLocalizations</key>
 	<array>
-		<string>cs</string><string>de</string><string>el</string><string>en</string><string>en_gb</string><string>eo</string><string>es</string><string>fr</string><string>hu</string><string>it</string><string>nl</string><string>pl</string><string>pt</string><string>ru</string>
+		<string>en</string>
 	</array>
 	<key>CFBundleName</key>
 	<string>FluxEngine</string>
