--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -12,7 +12,7 @@ jobs:
     - name: make
       run: CXXFLAGS="-Wp,-D_GLIBCXX_ASSERTIONS" make
 
-  build-macos:
+  build-macos-current:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
@@ -27,7 +27,7 @@ jobs:
         name: ${{ github.event.repository.name }}.${{ github.sha }}
         path: FluxEngine.pkg
 
-  build-macos:
+  build-macos-10.15:
     runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
