--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -27,7 +27,7 @@ jobs:
         name: ${{ github.event.repository.name }}.${{ github.sha }}
         path: FluxEngine.pkg
 
-  build-macos-10.15:
+  build-macos-10-15:
     runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
