--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,8 +9,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: apt
       run: sudo apt update && sudo apt install libudev-dev libsqlite3-dev protobuf-compiler libwxgtk3.0-gtk3-dev libfmt-dev
-    - name: make -j2
-      run: CXXFLAGS="-Wp,-D_GLIBCXX_ASSERTIONS" make
+    - name: make
+      run: CXXFLAGS="-Wp,-D_GLIBCXX_ASSERTIONS" make -j2
 
   build-macos-current:
     runs-on: macos-latest
