--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -8,8 +8,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: actions/checkout@v1
-      repository: 'davidgiven/fluxengine-testdata'
-      path: '../fluxengine-testdata'
+      with:
+        repository: 'davidgiven/fluxengine-testdata'
+        path: '../fluxengine-testdata'
     - name: apt
       run: sudo apt update && sudo apt install libudev-dev libsqlite3-dev protobuf-compiler libwxgtk3.0-gtk3-dev libfmt-dev
     - name: make
