Fix checkouts, maybe?

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -6,10 +6,11 @@ jobs:
   build-linux:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
       with:
+        repository: 'davidgiven/fluxengine'
         path: 'fluxengine'
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
       with:
         repository: 'davidgiven/fluxengine-testdata'
         path: 'fluxengine-testdata'
