Try and install compatible versions of protobuf.

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -69,6 +69,9 @@ jobs:
           mingw-w64-i686-nsis
           zip
           vim
+    - name: update-protobuf
+      run |
+         pacman -U --noconfirm https://repo.msys2.org/mingw/mingw32/mingw-w64-i686-protobuf-21.9-1-any.pkg.tar.zst
     - uses: actions/checkout@v2
       with:
         repository: 'davidgiven/fluxengine'
