--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -70,7 +70,7 @@ jobs:
           zip
           vim
     - name: update-protobuf
-      run |
+      run: |
          pacman -U --noconfirm https://repo.msys2.org/mingw/mingw32/mingw-w64-i686-protobuf-21.9-1-any.pkg.tar.zst
     - uses: actions/checkout@v2
       with:
