--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -20,7 +20,7 @@ jobs:
         path: 'fluxengine-testdata'
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: libudev-dev libsqlite3-dev protobuf-compiler libwxgtk3.0-dev libfmt-dev libprotobuf-dev
+        packages: libudev-dev libsqlite3-dev protobuf-compiler libwxgtk3.0-gtk3-dev libfmt-dev libprotobuf-dev wx-common
     - name: make
       run: CXXFLAGS="-Wp,-D_GLIBCXX_ASSERTIONS" make -j2 -C fluxengine
 
