--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -21,6 +21,9 @@ jobs:
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with:
         packages: libudev-dev libsqlite3-dev protobuf-compiler libwxgtk3.0-gtk3-dev libfmt-dev libprotobuf-dev wx-common
+    - name: setup
+      run: |
+        sudo update-alternatives --auto wx-config
     - name: make
       run: CXXFLAGS="-Wp,-D_GLIBCXX_ASSERTIONS" make -j2 -C fluxengine
 
