--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -68,7 +68,7 @@ jobs:
           mingw-w64-i686-wxWidgets
           mingw-w64-i686-zlib
           mingw-w64-i686-nsis
-          mingw-w64-python
+          mingw-w64-i686-python
           zip
           vim
     - name: update-protobuf
