--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -83,7 +83,7 @@ jobs:
         repository: 'davidgiven/fluxengine-testdata'
         path: 'fluxengine-testdata'
     - name: build
-      run: make -j2 -C fluxengine
+      run: make -j`nproc` -C fluxengine
 
     - name: nsis
       run: |
